# aws_clients

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
camugo_aws_clients/: utils.py
camugo_aws_clients/clients/: __init__.py  lambda_cl.py  s3_cl.py
src/aws_clients/: utils.py
src/aws_clients/clients/: __init__.py  s3client.py
